--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,10 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
 body {
-  background-color: rgba(22, 30, 235, 0.5);
+  background-color: black;
+  color: white;
   font: 13px Helvetica, Arial;
 }
 .heading h1 {
@@ -15,29 +12,49 @@ body {
 form {
   
   padding: 3px;
+  box-sizing:border-box;
   position: fixed;
   bottom: 0;
   width: 100%;
+  margin:0 auto;
 }
 form input {
   border: 0;
   padding: 10px;
-  width: 90%;
+  box-sizing: border-box;
+  width: 80%;
   border-top-left-radius:8px ;
   border-bottom-left-radius: 8px;
-  margin-right: 0.5%;
+  margin-right: 0;
     
 }
 
 form input:focus {
   outline:none;
+  border-bottom:2px solid blue;
   
 }
+
+.img::before {
+  content:"";
+  z-index: 0;
+}
+.img {
+  border:none;
+  width:5%;
+  height:70%;
+  display: inline-block;
+  cursor: pointer;
+  white-space: nowrap;
+  background-color:white;
+  margin:0;
+}
 form button {
-  width: 9%;
+  width: 10%;
   background: rgb(130, 224, 255);
   border: none;
   padding: 10px;
+  box-sizing:border-box;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
@@ -46,15 +63,15 @@ form button {
   margin: 0;
   padding: 0;
 }
-#messages li {
-  padding: 5px 10px;
+#messages ul li {
+  padding-top:4px;;
+  box-sizing: border-box;
   width:auto;
   height:auto;
   border-radius: 10px;
-}
-#messages li:nth-child(odd) {
   background: #eee;
 }
+
 
 
 
