making it better

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,7 +14,7 @@ form {
   padding: 3px;
   box-sizing:border-box;
   position: fixed;
-  bottom: 0;
+  bottom: 0.5em;
   width: 100%;
   margin:0 auto;
 }
