--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,9 @@
       <input id="m" autocomplete="off" />
 <!--<input class="img" type="file" name="image" id="image" multiple> -->
       <button class="sendMessage">Send</button>
+      <div class="users">Users</div>
     </form>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
