--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,19 +10,20 @@ body {
   text-decoration: underline;
 }
 form {
-  
+  background-color: white;
   padding: 3px;
   box-sizing:border-box;
   position: fixed;
-  bottom: 0.5em;
+  bottom: 0;
   width: 100%;
-  margin:0 auto;
+  height:4em;
 }
 form input {
   border: 0;
   padding: 10px;
   box-sizing: border-box;
   width: 80%;
+  height: 100%;
   border-top-left-radius:8px ;
   border-bottom-left-radius: 8px;
   margin-right: 0;
@@ -50,13 +51,23 @@ form input:focus {
   margin:0;
 }
 form button {
-  width: 10%;
+  width: 15%;
+  font-size: x-large;
+  height: 100%;
+  font-weight: 700;
   background: rgb(130, 224, 255);
   border: none;
   padding: 10px;
   box-sizing:border-box;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
+}
+
+.users{
+  
+  
+  width:10%;
+  text-align:center;
 }
 #messages {
   list-style-type: none;
