making it better

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <ul id="messages">
     </ul>
     <form action="">
-      <input id="m" autocomplete="off" />
+      <input id="m" autocomplete="off" placeholder="Enter your message here"/>
 <!--<input class="img" type="file" name="image" id="image" multiple> -->
       <button class="sendMessage">Send</button>
       <div class="users">Users</div>
